## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

######## Test targets: ###########

if WANT_GRAMCHECK

# List here (space separated) all yaml files to be run as part of make check:
TESTS=\
	interferens_celkkuuh2.yaml \
	interferens_celkkuuh3.yaml \
	interferens_celkkuuh4.yaml \
	msyn-adj-gen-nom.yaml \
	msyn-adj-sg-pl.yaml \
	msyn-agr-other-pl3.yaml \
	msyn-agr-other-sg3.yaml \
	msyn-agr-sg3-pl3.yaml \
	msyn-det-nom-acc.yaml \
	msyn-ext-pl3-sg3.yaml \
	msyn-ext-sg3-pl3.yaml \
	msyn-extneg-sg3-pl3.yaml \
	msyn-extsubj-acc-nom.yaml \
	msyn-extsubj-ill-nom.yaml \
	msyn-extv-sg3-pl3.yaml \
	msyn-imp-nom-acc.yaml \
	msyn-ncompl-acc-ill.yaml \
	msyn-ncompl-ess-sgill.yaml \
	msyn-ncompl-placc-plill.yaml \
	msyn-num-acc-par.yaml \
	msyn-num-nom-par.yaml \
	msyn-num-par-gen.yaml \
	msyn-num-par-nom.yaml \
	msyn-obj-acc-ill.yaml \
	msyn-obj-nom-acc.yaml \
	msyn-obj-plnom-placc.yaml \
	msyn-pass-accsubj-nomsubj.yaml \
	msyn-po-acc-gen.yaml \
	msyn-po-nom-gen.yaml \
	msyn-posspl-acc-gen.yaml \
	msyn-pred-acc-nom.yaml \
	msyn-quant-gen-nom.yaml \
	msyn-refl-sg-pl.yaml \
	msyn-top-nom-acc.yaml \
	msyn-v-actio-sg1.yaml \
	ovdamearkkat.yaml \
	science.yaml \
	wikipedia.yaml

# List tests that are presently (expected) failures here, ie things that should
# be fixed *later*, but is not critical at the moment:
XFAIL_TESTS=\
	interferens_celkkuuh3.yaml \
	interferens_celkkuuh4.yaml \
	msyn-det-nom-acc.yaml \
	msyn-ext-pl3-sg3.yaml \
	msyn-ext-sg3-pl3.yaml \
	msyn-extsubj-ill-nom.yaml \
	msyn-extv-sg3-pl3.yaml \
	msyn-imp-nom-acc.yaml \
	msyn-ncompl-acc-ill.yaml \
	msyn-ncompl-placc-plill.yaml \
	msyn-num-acc-par.yaml \
	msyn-num-par-gen.yaml \
	msyn-num-par-nom.yaml \
	msyn-obj-acc-ill.yaml \
	msyn-pass-accsubj-nomsubj.yaml \
	msyn-po-acc-gen.yaml \
	msyn-po-nom-gen.yaml \
	msyn-posspl-acc-gen.yaml \
	msyn-pred-acc-nom.yaml \
	msyn-quant-gen-nom.yaml \
	msyn-refl-sg-pl.yaml \
	msyn-top-nom-acc.yaml \
	msyn-v-actio-sg1.yaml \
	ovdamearkkat.yaml \
	science.yaml \
	wikipedia.yaml

endif # WANT_GRAMCHECK

# These actually pass:
#	msyn-agr-sg3-pl3.yaml 
#	msyn-ncompl-ess-sgill.yaml 



#### Do NOT edit below here: ####
include $(top_srcdir)/../giella-core/am-shared/tools-grammarcheckers-tests-dir-include.am
