## Process this file with automake to produce Makefile.in
## Copyright: Sámediggi/Divvun/UiT
## Licence: GPL v3+

######## Test targets: ###########

if WANT_GRAMCHECK

# List here (space separated) all yaml files to be run as part of make check:
TESTS=\
	interferens_celkkuuh2.yaml \
	interferens_celkkuuh3.yaml \
	interferens_celkkuuh4.yaml \
	interferens_celkkuuh5.yaml \
	msyn-adj-attr-pred.yaml \
	msyn-adj-gen-nom.yaml \
	msyn-adj-pred-attr.yaml \
	msyn-adj-sg-pl.yaml \
	msyn-advl-plgen-sgill.yaml \
	msyn-advl-plloc-sgcom.yaml \
	msyn-advl-plloc-sgill.yaml \
	msyn-agr-imprt-sg3.yaml \
	msyn-agr-other-pl3.yaml \
	msyn-agr-other-sg2.yaml \
	msyn-agr-pl3-sg3.yaml \
	msyn-agr-sg1-sg3.yaml \
	msyn-agr-sg2-sg3.yaml \
	msyn-agr-sg3-du3.yaml \
	msyn-agr-sg3-pl3.yaml \
	msyn-attr-com-gen.yaml \
	msyn-det-nom-acc.yaml \
	msyn-dynamic-compounds.yaml \
	msyn-ext-pl3-sg3.yaml \
	msyn-extneg-sg3-pl3.yaml \
	msyn-extsubj-acc-nom.yaml \
	msyn-extsubj-gen-nom.yaml \
	msyn-extsubj-ill-nom.yaml \
	msyn-extv-sg3-pl3.yaml \
	msyn-imp-nom-acc.yaml \
	msyn-ncompl-acc-ill.yaml \
	msyn-ncompl-ess-sgill.yaml \
	msyn-ncompl-placc-plill.yaml \
	msyn-negcompl-sg3-conneg.yaml \
	msyn-num-acc-par.yaml \
	msyn-num-nom-par.yaml \
	msyn-num-par-gen.yaml \
	msyn-obj-acc-ill.yaml \
	msyn-obj-plnom-placc.yaml \
	msyn-obj-sgnom-sgacc.yaml \
	msyn-pass-accsubj-nomsubj.yaml \
	msyn-plobj-nom-acc.yaml \
	msyn-po-acc-gen.yaml \
	msyn-po-nom-gen.yaml \
	msyn-posspl-acc-gen.yaml \
	msyn-pred-acc-nom.yaml \
	msyn-pred-ill-nom.yaml \
	msyn-predagr-pl3-sg3.yaml \
	msyn-quant-gen-nom.yaml \
	msyn-quant-nom-gen.yaml \
	msyn-refl-sg-pl.yaml \
	msyn-rel-sg-pl.yaml \
	msyn-subj-gen-nom.yaml \
	msyn-top-nom-acc.yaml \
	msyn-v-actio-sg1.yaml \
	msyn-v-prfprc-sg1.yaml \
	myn-imp-pl3-sg3.yaml \
	neg-adj-attr-pred.yaml \
	neg-adj-gen-nom.yaml \
	neg-advl-plgen-sgill.yaml \
	neg-advl-plloc-sgcom.yaml \
	neg-agr-imprt-sg3.yaml \
	neg-agr-other-pl3.yaml \
	neg-agr-other-sg2.yaml \
	neg-agr-other-sg3.yaml \
	neg-agr-sg3-pl3.yaml \
	neg-det-nom-acc.yaml \
	neg-extsubj-acc-nom.yaml \
	neg-extsubj-ill-nom.yaml \
	neg-extv-sg3-pl3.yaml \
	neg-interferens_celkkuuh.yaml \
	neg-ncomple-ess-sgill.yaml \
	neg-negcompl-sg3-conneg.yaml \
	neg-obj-acc-ill.yaml \
	neg-obj-plnom-placc.yaml \
	neg-obj-sgnom-sgacc.yaml \
	neg-orrood-inf-actioess.yaml \
	neg-pass-accsubj-nomsubj.yaml \
	neg-po-nom-gen.yaml \
	neg-po-placc-plgen.yaml \
	neg-posspl-acc-gen.yaml \
	neg-posspl-ill-gen.yaml \
	neg-quant-nom-gen.yaml \
	neg-subj-gen-nom.yaml \
	neg-top-nom-acc.yaml \
	neg-v-actio-sg1.yaml \
	neg-v-prfprc-sg1.yaml \
	neg-v-sg1-prfprc.yaml \
	ovdamearkkat.yaml \
	science.yaml \
	syn-OVS-OSV.yaml \
	typos.yaml \
	wikipedia.yaml

# List tests that are presently (expected) failures here, ie things that should
# be fixed *later*, but is not critical at the moment:
XFAIL_TESTS=\
	interferens_celkkuuh2.yaml \
	interferens_celkkuuh3.yaml \
	interferens_celkkuuh4.yaml \
	interferens_celkkuuh5.yaml \
	msyn-dynamic-compounds.yaml \
	msyn-extsubj-ill-nom.yaml \
	msyn-ncompl-acc-ill.yaml \
	msyn-ncompl-ess-sgill.yaml \
	msyn-negcompl-sg3-conneg.yaml \
	msyn-num-par-nom.yaml \
	msyn-pass-accsubj-nomsubj.yaml \
	msyn-po-acc-gen.yaml \
	msyn-po-nom-gen.yaml \
	msyn-posspl-acc-gen.yaml \
	msyn-pred-acc-nom.yaml \
	msyn-quant-gen-nom.yaml \
	msyn-refl-sg-pl.yaml \
	msyn-rel-sg-pl.yaml \
	msyn-top-nom-acc.yaml \
	msyn-v-actio-sg1.yaml \
	neg-extv-sg3-pl3.yaml \
	neg-det-nom-acc.yaml \
	neg-negcompl-sg3-conneg.yaml \
	neg-obj-acc-ill.yaml \
	ovdamearkkat.yaml \
	science.yaml \
	syn-OVS-OSV.yaml \
	typos.yaml \
	wikipedia.yaml


endif # WANT_GRAMCHECK

# These actually pass:
#	msyn-agr-sg3-pl3.yaml 
#	msyn-ncompl-ess-sgill.yaml 



#### Do NOT edit below here: ####
include $(top_srcdir)/../giella-core/am-shared/tools-grammarcheckers-tests-dir-include.am
